--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="word_synonyms">Synonyms</string>
     <string name="add_record_title_hint">Title</string>
     <string name="add_record_desc_hint">Description</string>
+    <string name="no_internet_connection">Internet connection is not available</string>
+    <string name="record_save_button">Save</string>
 </resources>
