--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -33,4 +33,21 @@
     <string name="failure_load_records">"Failed to load records "</string>
     <string name="records_empty">No records</string>
     <string name="confirm_deleting_all_records">Selected records will be deleted and cannot be restored any more. Are you sure to continue?</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">San</string>
+    <string name="nav_header_subtitle">symbiot.dev@gmail.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="homeFragment">Home</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="aboutFragment">About</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="favoritesFragment">Favorites</string>
+    <string name="settings_label">Settings</string>
 </resources>
