--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="favoritesFragment">Favorites</string>
     <string name="settings_label">Settings</string>
+    <string name="add_fragment_background">Background</string>
 </resources>
