Added ViewPager for records, refactoring

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -52,4 +52,7 @@
     <string name="settings_label">Settings</string>
     <string name="add_fragment_background">Background</string>
     <string name="select_date_label">Select date</string>
+    <string name="add_fragment_fonts">Fonts</string>
+    <string name="record_prev">Prev</string>
+    <string name="record_next">Next</string>
 </resources>
